# pfjax

./: .gitignore  .readthedocs.yml  404.html  CHANGELOG.md  LICENSE  NEWS.md  README.md  base_model.py  bm_model.py  bm_model_jax.py  bm_test.py  index.html  lotvol.ipynb  lotvol_model.py  mkdocs.yml  objects.inv  particle_filter.py  particle_filter_jax.py  particle_filter_mvn.py  pf_jax.ipynb  pfjax.ipynb  pyproject.toml  references.bib  setup.cfg  simulate.py  sitemap.xml  test_lotvol_model.py  test_particle_filter.py  test_particle_filter_jax.py  tox.ini
.github/workflows/: build_test.yml  uv_deploy.yml  uv_test.yml
deprecated/: particle_filter.py
docs/: .gitignore  TODO.md  _latex_macros.qmd  _macros.tex  _quarto.yml  conf.py  gradient_comparisons.qmd  index.md  index.qmd  index.rst  mcmc_tutorial.qmd  pfjax.qmd  requirements.txt  stochopt_tutorial.qmd  test.qmd
docs/.jupyter_cache/: global.db
docs/_extensions/mkdocs/: _extension.yml
docs/hooks/: ansi_escapes.py  md_in_csl.py
docs/internal/: .gitignore  _latex_macros.qmd  biblio.bib  continuous_time.qmd  dynamic_methods.qmd  example.ipynb  lotvol-experiments.ipynb  lotvol-mvn.ipynb  pgnet.ipynb  qm_gle.qmd  sde.md  sde.qmd  stochvol.ipynb  stochvol_jump_tutorial.md
docs/javascripts/: mathjax.js
docs/notebooks/: ExpOU.ipynb  ExpOU_Continuous.ipynb  ExpOU_Continuous_custom-sandbox-final-discrete-j.ipynb  ExpOU_Continuous_custom-sandbox-final-wow.ipynb  ExpOU_Continuous_custom-sandbox.ipynb  ExpOU_Continuous_custom.ipynb  ExpOU_hessian.ipynb  JumpDiff.ipynb  JumpDiff_MCMC.ipynb  Meta stock lol.ipynb  Sandbox.ipynb  StoichModel.ipynb  Untitled1.ipynb  biblio.bib  final.ipynb  gradient_comparisons.md  latexdefs.tex  lotvol.ipynb  mcmc_tutorial.ipynb  mcmc_tutorial.md  mwg_theta.csv  pfjax.ipynb  pfjax.md  sde_model.md  stochopt_tutorial.ipynb  stochopt_tutorial.md  test.md
docs/notebooks/internal/: BMModel.ipynb  DELETE_gc_test.py  JumpDiff.ipynb  MWG MCMC.ipynb  StochVol Model.ipynb  blackjax.ipynb  continuous-resampling.ipynb  continuous_time.qmd  gaussCop-gradient-check.ipynb  gradient_comparisons.ipynb  gradient_comparisons_old.ipynb  jump-diffusions.ipynb  latex_macros.qmd  latexdefs.tex  lotvol_mult.ipynb  lv_low.csv  mcmc.ipynb  mcmc_tutorial.ipynb  optimal-transport-resampling.ipynb  parallel.ipynb  pf-gc-BrownianMotion.ipynb  pf-gc-LotVol.ipynb  pf-gc.ipynb  pf-mvn.ipynb  pfjax.ipynb  pfjax_ext.ipynb  pfjax_old.ipynb  pfjax_v2.ipynb  qm_gle.ipynb  res_dict.json  resampling-methods-comparison.ipynb  sde.ipynb  sde.qmd  sde_model.ipynb  stoch_opt_tutorial_old.ipynb  stochopt_tutorial.ipynb  test.qmd
docs/pages/: examples.rst
docs/quarto/: .gitignore  _latex_macros.qmd  _quarto.yml  index.qmd  objects.json  sde_tutorial.qmd  stochopt_tutorial.qmd
docs/quarto/api/: _sidebar.yml  index.qmd  models.base_model.qmd
docs/source/: conf.py  index.rst  pfjax.rst
docs/sphinx/: index.md
docs/sphinx/notebooks/: mcmc_tutorial.md  stochopt_tutorial.md
examples/: BMModel.ipynb  LVModel_full_var.ipynb  PGNET.ipynb  StoichModel.ipynb  bm_model.ipynb  bridge_proposal.ipynb  continuous-resampling.ipynb  deleteme.py  latexdefs.tex  lotvol-experiments.ipynb  lotvol-mvn.ipynb  lotvol.ipynb  lotvol_mult.ipynb  lotvol_pres.ipynb  lv_high.csv  mcmc.ipynb  pf-mvn.ipynb  pfjax.ipynb  pgnet-mvn.ipynb  pgnet.ipynb  qm_gle.ipynb  sde.ipynb  stoch_opt_tutorial.ipynb  todo.ipynb
gradient_comparisons/: index.html
mcmc_tutorial/: index.html
numpy/: bm_model.py  test_particle_filter.py
pfjax/: index.html
reference/pfjax/: index.html
reference/pfjax/experimental/: index.html
reference/pfjax/loglik_full/: index.html
reference/pfjax/mcmc/: index.html
reference/pfjax/models/: index.html
reference/pfjax/mvn_bridge/: index.html
reference/pfjax/neg_loglik/: index.html
reference/pfjax/particle_filter/: index.html
reference/pfjax/particle_resamplers/: index.html
reference/pfjax/particle_smooth/: index.html
reference/pfjax/sde/: index.html
reference/pfjax/simulate/: index.html
reference/pfjax/test/: index.html
reference/pfjax/utils/: index.html
search/: search_index.json
src/pfjax/: __init__.py  __metadata__.py  bm_model.py  full_loglik.py  loglik_full.py  lotvol_model.py  lotvol_model_log.py  mcmc.py  mvn_bridge.py  particle_filter.py  particle_filter_mvn.py  particle_resamplers.py  particle_smooth.py  pgnet_model.py  proj_data.py  sde.py  simulate.py  stoch_opt.py  utils.py
src/pfjax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pfjax/deprecated/: bm_model.py  mcmc.py  particle_filter.py  particle_filter_mvn.py  particle_filter_old.py
src/pfjax/experimental/: __init__.py  base_model.py  continuous_time.py  continuous_time_model.py  lotvol_model.py  lotvol_model_log.py  neg_loglik.py  particle_accumulator.py  particle_filter.py  particle_filter2.py  pgnet_model_no_DNA.py  sde_model.py  stoichmodel.py
src/pfjax/models/: __init__.py  base_model.py  (+10 more)
stochopt_tutorial/: index.html
tests/: README.md  bm_test.py  lotvol_model.py  particle_filter.py  pfmvn_test_script.py  pgnet_model.py  ss_model.py  test_auxillary_filter.py  test_factorization.py  test_loglik_full.py  test_mcmc.py  test_mvn_bridge.py  test_ot.py  test_param_mwg_update.py  test_particle_filter.py  test_particle_filter_rb.py  test_particle_smooth.py  test_pgnet_model.py  test_resample_mvn.py  test_resample_ot.py  test_sde.py  test_simulate.py  test_stoichmodel.py  utils.py
tests/deprecated/: bm_model.py  particle_filter.py  test_param_mwg_update.py  test_particle_filter copy.py  test_pgnet_model.py  test_resample_mvn.py  test_resample_ot.py  test_sde.py
tests/interactive/: basic_filter.py  lotvol_model.py  lotvol_model_log.py  pfmvn_test_script.py  pgnet_no_dna.py  stoch_opt.py  test-gaussCop.ipynb  test_continuous_time_model.py  test_custom_pf.py  test_jax.py  test_lotvol_model.py  test_mcmc.py  test_neural_sde.py  test_numpyro.py  test_oop.py  test_ot.py  test_pf.py  test_proj_plot.py  test_pytest.py  test_sv_model.py  test_tree.py  test_xmap.py
(+51 files in other folders)
