[project]
name = "pfjax"
version = "0.0.3rc1"
description = "Particle Filtering in JAX"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    { name = "mlysy", email = "mlysy@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "jax>=0.6.2",
    "jaxlib>=0.6.2",
    "ott-jax>=0.6.0",
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
source = "https://github.com/mlysy/pfjax"
issues = "https://github.com/mlysy/pfjax/issues"
changelog = "https://github.com/mlysy/pfjax/NEWS.md"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "pytest-env>=1.2.0",
]

[tool.pytest.ini_options]
env = [
    "JAX_ENABLE_X64=True",
]
addopts = "--ignore=tests/interactive --ignore=tests/deprecated"
testpaths = ["tests"]
