[project]
name = "pfjax"
version = "0.0.3rc1"
description = "Particle Filtering in JAX"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    { name = "Martin Lysy" },
    { name = "Pranav Subramani" },
    { name = "Jonathan Ramkissoon" },
    { name = "Mohan Wu" },
    { name = "Michelle Ko" },
    { name = "Kanika Choptra" },
    { name = "Feiyu Zhu" },
    { name = "Micky Liu" },
    { name = "Monica Zhu" }
]
maintainers = [
    { name = "Martin Lysy", email = "mlysy@uwaterloo.ca" }
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.11"
dependencies = [
    "jax>=0.5.0",
    "jaxlib>=0.5.0",
    "ott-jax>=0.5.0",
]

[project.urls]
source = "https://github.com/mlysy/pfjax"
issues = "https://github.com/mlysy/pfjax/issues"
changelog = "https://github.com/mlysy/pfjax/NEWS.md"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
env = [
    "JAX_ENABLE_X64=True",
]
addopts = "--ignore=tests/interactive --ignore=tests/deprecated"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pandas>=3.0.0",
    "pytest>=9.0.2",
    "pytest-env>=1.2.0",
]
