[metadata]
name = pfjax
version = 0.0.0.9000
author = Pranav Subramani, Jonathan Ramkissoon, Michelle Ko, Mohan Wu, Yunfeng Yang, Martin Lysy
author_email = mlysy@uwaterloo.ca
description = Particle Filtering in Jax
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mlysy/pfjax
project_urls =
    Bug Tracker = https://github.com/mlysy/pfjax/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    jax
    numpy
    pandas
# setup_requires # don't need here, have in toml.
# tests_require # posssibly depreciated, i.e., should be in extra_requires
# extras are: tests, examples, docs
    
[options.packages.find]
where = src
