[metadata]
name = pfjax
version = attr: pfjax.__version__
author = attr: pfjax.__author__
author_email = mlysy@uwaterloo.ca
description = Particle Filtering in Jax
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mlysy/pfjax
project_urls =
    Bug Tracker = https://github.com/mlysy/pfjax/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    jax
    jaxlib
    ott-jax >= 0.3.0

[options.extras_require]
docs =
    optax
    numpy
    pandas
    projplot
    seaborn
    myst_nb
    sphinx_rtd_theme
    sphinx-autoapi
    sphinxcontrib-bibtex
    jupytext
    
[options.packages.find]
where = src
